@startuml

title __HOME's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.main {
      namespace Home {
        class com.architectica.socialcomponents.main.main.Home.HomeFragment {
            - counterAnimationInProgress : boolean
            - floatingActionButton : FloatingActionButton
            - newPostsCounterTextView : TextView
            - progressBar : ProgressBar
            - recyclerView : RecyclerView
            - swipeContainer : SwipeRefreshLayout
            + HomeFragment()
            + createPresenter()
            + hideCounterView()
            {static} + newInstance()
            + onActivityResult()
            + onCreate()
            + onCreateOptionsMenu()
            + onCreateView()
            + onOptionsItemSelected()
            + onResume()
            + openChatActivity()
            + openChatsList()
            + openCreatePostActivity()
            + openPostDetailsActivity()
            + openProfileActivity()
            + refreshPostList()
            + removePost()
            + showCounterView()
            + showFloatButtonRelatedSnackBar()
            + updatePost()
            - initContentView()
            - initFloatingActionButton()
            - initPostCounter()
            - initPostListRecyclerView()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.main {
      namespace Home {
        class com.architectica.socialcomponents.main.main.Home.HomePresenter {
            + HomePresenter()
            + initPostCounter()
            ~ onChatClicked()
            ~ onCreatePostClickAction()
            ~ onPostClicked()
            ~ onPostCreated()
            ~ onPostUpdated()
            ~ updateNewPostCounter()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.main {
      namespace Home {
        interface com.architectica.socialcomponents.main.main.Home.HomeView {
            {abstract} + hideCounterView()
            {abstract} + openChatActivity()
            {abstract} + openChatsList()
            {abstract} + openCreatePostActivity()
            {abstract} + openPostDetailsActivity()
            {abstract} + openProfileActivity()
            {abstract} + refreshPostList()
            {abstract} + removePost()
            {abstract} + showCounterView()
            {abstract} + showFloatButtonRelatedSnackBar()
            {abstract} + updatePost()
        }
      }
    }
  }
  

  com.architectica.socialcomponents.main.main.Home.HomeFragment .up.|> com.architectica.socialcomponents.main.main.Home.HomeView
  com.architectica.socialcomponents.main.main.Home.HomeFragment -up-|> com.architectica.socialcomponents.main.base.BaseFragment
  com.architectica.socialcomponents.main.main.Home.HomeFragment o-- com.architectica.socialcomponents.adapters.PostsAdapter : postsAdapter
  com.architectica.socialcomponents.main.main.Home.HomePresenter -up-|> com.architectica.socialcomponents.main.base.BasePresenter
  com.architectica.socialcomponents.main.main.Home.HomePresenter o-- com.architectica.socialcomponents.managers.PostManager : postManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
